welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:12: error: type mismatch;
 found   : Unit
 required: Boolean
		else if (x=getMondeLargeur()-1) {y=y+1}
                          ^ZigZag:17: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
		ecritMessage()
                ^