welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
	def enPosition:Boolean = {
		if (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1) {
			return true
		}
		else {return false}
	}
	var x:Int=0
	var y:Int=0
	def initialise() {
		if (x<getMondeLargeur()-1) {x=x+1}
		else if (x=getMondeLargeur()-1) {y=y+1}
	}

	
	while (!enPosition) {
		ecritMessage()
		setPos(x,y)
		initialise()
	}



	

}
